--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1836,7 +1836,7 @@
     <string name="bluetooth_tethering_off_subtext_config" msgid="6941934844527406581">"透過藍牙分享這個「<xliff:g id="DEVICE_NAME">%1$d</xliff:g>」的網際網路連線"</string>
     <string name="bluetooth_tethering_overflow_error" msgid="5292358672240161566">"最多只能有 <xliff:g id="MAXCONNECTION">%1$d</xliff:g> 個裝置共用網路。"</string>
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"將中斷 <xliff:g id="DEVICE_NAME">%1$s</xliff:g> 的網路共用。"</string>
-    <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"乙太網路網路共用"</string>
+    <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"乙太網路共用"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"透過乙太網路分享手機的網際網路連線"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"使用無線基地台和網路共用功能，透過你的行動數據連線提供網際網路給其他裝置。應用程式也可以建立無線基地台來和鄰近的裝置分享內容。"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"使用無線基地台和網路共用功能，讓其他裝置能夠透過你的 Wi-Fi 或行動數據連線連上網際網路。應用程式也可以建立無線基地台，以便與鄰近的裝置分享內容。"</string>
@@ -2307,7 +2307,7 @@
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"關於字幕偏好設定"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"進一步瞭解字幕偏好設定"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"放大"</string>
-    <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"放大功能捷徑"</string>
+    <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"放大功能快速鍵"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"放大目前輸入的內容"</string>
     <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"放大輸入的文字"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"關於放大功能"</string>
@@ -2327,7 +2327,7 @@
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"改用無障礙工具按鈕"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"使用「輕觸三下」手勢"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"這麼做可能會使鍵盤運作速度變慢"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"當你使用輕觸三下手勢放大局部畫面時，可能會發現鍵盤無法正常運作。\n\n如要避免這個問題，你可以將放大捷徑從輕觸三下改成其他方式。\n"<annotation id="link">"變更設定"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"當你使用輕觸三下手勢放大局部畫面時，可能會發現鍵盤無法正常運作。\n\n如要避免這個問題，你可以改選擇其他方式當作放大捷徑。\n"<annotation id="link">"變更設定"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"仍要繼續"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"取消"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"放大功能設定"</string>
@@ -2351,7 +2351,7 @@
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"輕觸三下即可縮放畫面"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"輕觸按鈕即可縮放"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"快速放大螢幕畫面中的內容"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;放大螢幕畫面的方法如下：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 使用捷徑啟動放大功能&lt;br/&gt; {1,number,integer}. 輕觸螢幕&lt;br/&gt; {2,number,integer}. 拖曳 2 指即可四處移動畫面&lt;br/&gt; {3,number,integer}. 使用 2 指撥動即可調整縮放等級&lt;br/&gt; {4,number,integer}. 使用捷徑關閉放大功能&lt;br/&gt;&lt;br/&gt; &lt;b&gt;暫時放大螢幕畫面的方法如下：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 確認放大類型已設為全螢幕&lt;br/&gt; {1,number,integer}. 使用捷徑啟動放大功能&lt;br/&gt; {2,number,integer}. 按住螢幕上的任一處&lt;br/&gt; {3,number,integer}. 拖曳手指即可四處移動畫面&lt;br/&gt; {4,number,integer}. 移開手指即可關閉放大功能"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;放大螢幕畫面的方法如下：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 使用快速鍵啟動放大功能&lt;br/&gt; {1,number,integer}. 輕觸螢幕&lt;br/&gt; {2,number,integer}. 拖曳 2 指即可四處移動畫面&lt;br/&gt; {3,number,integer}. 使用 2 指撥動即可調整縮放等級&lt;br/&gt; {4,number,integer}. 使用快速鍵關閉放大功能&lt;br/&gt;&lt;br/&gt; &lt;b&gt;暫時放大螢幕畫面的方法如下：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 確認放大類型已設為全螢幕&lt;br/&gt; {1,number,integer}. 使用快速鍵啟動放大功能&lt;br/&gt; {2,number,integer}. 按住螢幕上的任一處&lt;br/&gt; {3,number,integer}. 拖曳手指即可四處移動畫面&lt;br/&gt; {4,number,integer}. 移開手指即可關閉放大功能"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"放大功能啟用後，你可以放大畫面上的內容。\n\n"<b>"如要進行縮放"</b>"，請開啟放大功能，然後輕觸畫面上的任何位置。\n"<ul><li>"使用兩指或多指以拖曳的方式捲動畫面"</li>\n<li>"使用兩指或多指撥動以調整縮放大小"</li></ul>\n\n<b>"如要暫時放大畫面"</b>"，請開啟放大功能，然後按住畫面上的任何位置。\n"<ul><li>"使用手指拖曳可瀏覽畫面的不同部分"</li>\n<li>"放開手指即可縮小"</li></ul>\n\n"你無法放大鍵盤和導覽列部分。"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"第 <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> 頁，共 <xliff:g id="NUM_PAGES">%2$d</xliff:g> 頁"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"使用無障礙按鈕開啟"</string>
@@ -2435,18 +2435,18 @@
     <string name="accessibility_control_timeout_about_title" msgid="813588002683460837">"關於提示顯示時間 (無障礙功能逾時)"</string>
     <string name="accessibility_control_timeout_footer_learn_more_content_description" msgid="8118584413220542193">"進一步瞭解提示顯示時間 (無障礙功能逾時)"</string>
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"提示顯示時間"</string>
-    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"部分應用程式可能不支援這項顯示時間長度偏好設定"</string>
-    <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"選擇系統提示你執行操作的暫時訊息顯示時間長度"</string>
+    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"部分應用程式可能不支援這個顯示時間設定值"</string>
+    <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"當系統提示你執行特定操作時，這類暫時性訊息在螢幕上顯示的時間長度 (請在下方設定)"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"按住的延遲時間"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"色彩反轉"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"使用色彩反轉"</string>
-    <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"色彩反轉捷徑"</string>
+    <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"色彩反轉快速鍵"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"「色彩反轉」功能可將螢幕上的淺色部分轉成深色，並將深色部分轉成淺色。"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;注意事項&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; 媒體和圖像中的色彩都會改變&lt;/li&gt; &lt;li&gt; 色彩反轉的效果會套用到所有應用程式&lt;/li&gt; &lt;li&gt; 如要讓背景呈現深色，可以改用深色主題&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"自動點擊 (停留時間)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"自動點選 (停留時間)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"關於自動點擊 (停留時間)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"進一步瞭解自動點擊 (停留時間)"</string>
-    <string name="accessibility_autoclick_intro_text" msgid="8959680635470639347">"已連接的滑鼠可設為在超過特定時間未移動時自動點選畫面上的項目"</string>
+    <string name="accessibility_autoclick_intro_text" msgid="8959680635470639347">"連接滑鼠後，你可以設定當游標在畫面上停留一段時間未移動時，讓滑鼠自動點選游標所在位置上的項目"</string>
     <string name="accessibility_autoclick_description" msgid="6695732131412361101">"不方便按滑鼠時可以使用自動點選功能"</string>
     <string name="accessibility_autoclick_default_title" msgid="2024730028293793490">"關閉自動點選"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"短"</string>
@@ -2487,7 +2487,7 @@
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"調整手機顯示的色彩"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"調整平板電腦顯示的色彩"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"使用色彩校正"</string>
-    <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"色彩校正捷徑"</string>
+    <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"色彩校正快速鍵"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"關於色彩校正"</string>
     <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"進一步瞭解色彩校正"</string>
     <string name="accessibility_color_inversion_about_title" msgid="8275754480247040136">"關於色彩反轉"</string>
@@ -2539,7 +2539,7 @@
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"藍色弱視"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"超暗"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"啟用超暗螢幕設定"</string>
-    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"超暗功能捷徑"</string>
+    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"超暗功能快速鍵"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"關於超暗功能"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"將螢幕調得比手機最低亮度更暗"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"將螢幕調得比平板電腦最低亮度更暗"</string>
@@ -2613,7 +2613,7 @@
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"停止"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"取消"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"停止「<xliff:g id="SERVICE">%1$s</xliff:g>」？"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"輕觸 [<xliff:g id="STOP">%1$s</xliff:g>] 會讓「<xliff:g id="SERVICE">%2$s</xliff:g>」停止運作。"</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"輕觸「<xliff:g id="STOP">%1$s</xliff:g>」會讓「<xliff:g id="SERVICE">%2$s</xliff:g>」停止運作。"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"未安裝任何服務"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"未選取任何服務"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"未提供說明。"</string>
@@ -2941,7 +2941,7 @@
     <string name="battery_saver_pref_auto_routine_summary" msgid="4739240095966241508">"將依照你的日常安排開啟"</string>
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"根據電量百分比"</string>
     <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"如果電池電量可能會在你下次的例行充電時間前耗盡，系統就會開啟「省電」模式"</string>
-    <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"將在電量為 <xliff:g id="PERCENT">%1$s</xliff:g> 時開啟"</string>
+    <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"將在電量剩 <xliff:g id="PERCENT">%1$s</xliff:g> 時開啟"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"設定時間表"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"延長電池續航力"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"充電時關閉"</string>
@@ -3836,7 +3836,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"工作手機鈴聲"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"預設工作通知音效"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"預設工作鬧鐘音效"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"與個人設定檔相同"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"與個人資料夾相同"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"要使用個人資料夾音效嗎？"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"確認"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"你的工作資料夾將使用與個人資料夾相同的音效"</string>
@@ -4808,7 +4808,7 @@
     <string name="suggestion_additional_fingerprints" msgid="4726777300101156208">"新增其他指紋"</string>
     <string name="suggestion_additional_fingerprints_summary" msgid="2825364645039666674">"使用其他指紋解鎖"</string>
     <string name="battery_saver_on_summary" msgid="4605146593966255848">"開啟"</string>
-    <string name="battery_saver_off_scheduled_summary" msgid="2193875981740829819">"將在電量為 <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> 時開啟"</string>
+    <string name="battery_saver_off_scheduled_summary" msgid="2193875981740829819">"將在電量剩 <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> 時開啟"</string>
     <string name="battery_saver_off_summary" msgid="4411561435493109261">"關閉"</string>
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"立即開啟"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"立即關閉"</string>
@@ -4955,7 +4955,7 @@
     <string name="ambient_display_title" product="device" msgid="4164103424628824786">"輕觸兩下裝置即可查看"</string>
     <string name="one_handed_title" msgid="2584414010282746195">"單手模式"</string>
     <string name="one_handed_mode_enabled" msgid="3396864848786359651">"使用單手模式"</string>
-    <string name="one_handed_mode_shortcut_title" msgid="1847871530184067369">"單手模式捷徑"</string>
+    <string name="one_handed_mode_shortcut_title" msgid="1847871530184067369">"單手模式快速鍵"</string>
     <string name="keywords_one_handed" msgid="969440592493034101">"可單手操作"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"向下滑動"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"這個捷徑的用途"</string>
@@ -5774,4 +5774,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"設定網路頻寬輸入頻率限制，這項設定會套用到提供網際網路連線的所有網路。"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"設定網路下載頻率限制"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"無限制"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
