--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -951,7 +951,7 @@
     <string name="wifi_sap_no_channel_error" msgid="2126487622024749402">"រលកសញ្ញា 5 GHz មិនមានផ្តល់ជូននៅក្នុងប្រទេសនេះទេ"</string>
     <string name="wifi_in_airplane_mode" msgid="1235412508135267981">"ពេល​ជិះ​យន្ត"</string>
     <string name="wifi_notify_open_networks" msgid="2610323626246818961">"ជូនដំណឹង​សម្រាប់​បណ្ដាញសាធារណៈ"</string>
-    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"ជូនដំណឹងនៅពេលមានបណ្តាញសាធារណៈកម្រិតខ្ពស់"</string>
+    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"ជូនដំណឹងនៅពេលមានបណ្តាញសាធារណៈគុណភាពខ្ពស់"</string>
     <string name="wifi_wakeup" msgid="3834327315861781611">"បើក Wi‑Fi ដោយស្វ័យប្រវត្តិ"</string>
     <string name="wifi_wakeup_summary" msgid="5778059083790221465">"Wi‑Fi នឹងបើកឡើងវិញនៅក្បែរបណ្តាញដែលមានគុណភាពខ្ពស់ដែលបានរក្សាទុក ដូចជាបណ្តាញ​នៅ​ផ្ទះ​របស់អ្នក"</string>
     <string name="wifi_wakeup_summary_no_location" msgid="681323616606485096">"មិន​អាច​ប្រើ​បាន​ទេ ​ពីព្រោះ​ទីតាំង​បាន​បិទ។ សូម​បើក"<annotation id="link">"ទីតាំង"</annotation>"។"</string>
@@ -2171,7 +2171,7 @@
     <string name="no_services" msgid="3898812785511572899">"មិន​សកម្ម"</string>
     <string name="runningservicedetails_services_title" msgid="11853795112787355">"សេវាកម្ម"</string>
     <string name="runningservicedetails_processes_title" msgid="5292271587797234038">"ដំណើរការ"</string>
-    <string name="service_stop" msgid="5712522600201308795">"ឈប់"</string>
+    <string name="service_stop" msgid="5712522600201308795">"បញ្ឈប់"</string>
     <string name="service_manage" msgid="3896322986828332075">"ការ​កំណត់"</string>
     <string name="service_stop_description" msgid="6327742632400026677">"សេវាកម្ម​នេះ​ត្រូវ​បាន​ចាប់ផ្ដើម​ដោយ​កម្មវិធី។ ការ​បញ្ឈប់​វា​អាច​ធ្វើ​ឲ្យ​កម្មវិធី​​បរាជ័យ។"</string>
     <string name="heavy_weight_stop_description" msgid="3086419998820881290">"មិន​អាច​បញ្ឈប់​កម្មវិធី​​​នេះ​ដោយ​សុវត្ថិភាព​បាន​ទេ។ បើ​អ្នក​បញ្ឈប់​វា អ្នក​អាច​បាត់បង់​ការងារ​បច្ចុប្បន្ន​របស់​អ្នក​មួយ​ចំនួន។"</string>
@@ -2254,7 +2254,7 @@
     <string name="testing_phone_info" product="tablet" msgid="1910768200608214456">"ព័ត៌មាន​កុំព្យូទ័រ​បន្ទះ"</string>
     <string name="testing_phone_info" product="default" msgid="1150527695827743906">"ព័ត៌មាន​ទូរស័ព្ទ"</string>
     <string name="input_methods_settings_title" msgid="7796027458321225550">"ការ​បញ្ចូល​អត្ថបទ"</string>
-    <string name="input_method" msgid="2982805181425436775">"វិធីសាស្ត្រ​បញ្ចូល"</string>
+    <string name="input_method" msgid="2982805181425436775">"វិធីបញ្ចូល"</string>
     <string name="current_input_method" msgid="3471068842881330883">"ក្ដារចុច​បច្ចុប្បន្ន"</string>
     <string name="input_method_selector" msgid="8463209725824763600">"កម្មវិធី​ជ្រើស​វិធីសាស្ត្រ​បញ្ចូល"</string>
     <string name="input_method_selector_show_automatically_title" msgid="6483428482089875034">"ស្វ័យប្រវត្តិ"</string>
@@ -2349,7 +2349,7 @@
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"ប៉ះ 3 ដងដើម្បីពង្រីក"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"ចុចប៊ូតុងដើម្បីពង្រីក ឬបង្រួម"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"ពង្រីកនៅលើអេក្រង់យ៉ាងរហ័ស ដើម្បីបង្ហាញខ្លឹមសារធំជាងមុន"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;ដើម្បីពង្រីក៖&lt;/b&gt;&lt;br/&gt; {0,number,integer}។ ប្រើ​ផ្លូវកាត់ ដើម្បីចាប់ផ្ដើម​ការពង្រីក&lt;br/&gt; {1,number,integer}។ ចុច​អេក្រង់&lt;br/&gt; {2,number,integer}។ អូស​ម្រាមដៃ 2 ដើម្បីផ្លាស់ទីនៅជុំវិញអេក្រង់&lt;br/&gt;{3,number,integer}។ ច្បិច​ដោយប្រើ​ម្រាមដៃ 2 ដើម្បី​កែតម្រូវ​ការពង្រីកបង្រួម&lt;br/&gt; {4,number,integer}។ ប្រើ​ផ្លូវកាត់ ដើម្បី​បញ្ឈប់​ការពង្រីក&lt;br/&gt;&lt;br/&gt; &lt;b&gt;ដើម្បីពង្រីក​ជាបណ្ដោះអាសន្ន៖&lt;/b&gt;&lt;br/&gt; {0,number,integer}។ សូមប្រាកដថា ប្រភេទនៃការ​ពង្រីករបស់អ្នកត្រូវបានកំណត់ទៅពេញអេក្រង់&lt;br/&gt; {1,number,integer}។ ប្រើ​ផ្លូវកាត់ ដើម្បី​ចាប់ផ្ដើម​ការពង្រីក&lt;br/&gt; {2,number,integer}។ ចុចកន្លែងណាមួយ​នៅលើ​អេក្រង់ឱ្យជាប់&lt;br/&gt; {3,number,integer}។ អូស​ម្រាមដៃ ដើម្បីផ្លាស់ទី​នៅជុំវិញ​អេក្រង់&lt;br/&gt; {4,number,integer}។ លើកម្រាមដៃ ដើម្បី​បញ្ឈប់​ការ​ពង្រីក"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;ដើម្បីពង្រីក៖&lt;/b&gt;&lt;br/&gt; {0,number,integer}. ប្រើ​ផ្លូវកាត់ ដើម្បីចាប់ផ្ដើម​ការពង្រីក&lt;br/&gt; {1,number,integer}. ចុច​អេក្រង់&lt;br/&gt; {2,number,integer}. អូស​ម្រាមដៃ 2 ដើម្បីផ្លាស់ទីនៅជុំវិញអេក្រង់&lt;br/&gt;{3,number,integer}. ច្បិច​ដោយប្រើ​ម្រាមដៃ 2 ដើម្បី​កែតម្រូវ​ការពង្រីកបង្រួម&lt;br/&gt; {4,number,integer}. ប្រើ​ផ្លូវកាត់ ដើម្បី​បញ្ឈប់​ការពង្រីក&lt;br/&gt;&lt;br/&gt; &lt;b&gt;ដើម្បីពង្រីក​ជាបណ្ដោះអាសន្ន៖&lt;/b&gt;&lt;br/&gt; {0,number,integer}. សូមប្រាកដថា ប្រភេទនៃការ​ពង្រីករបស់អ្នកត្រូវបានកំណត់ទៅពេញអេក្រង់&lt;br/&gt; {1,number,integer}. ប្រើ​ផ្លូវកាត់ ដើម្បី​ចាប់ផ្ដើម​ការពង្រីក&lt;br/&gt; {2,number,integer}. ចុចកន្លែងណាមួយ​នៅលើ​អេក្រង់ឱ្យជាប់&lt;br/&gt; {3,number,integer}. អូស​ម្រាមដៃ ដើម្បីផ្លាស់ទី​នៅជុំវិញ​អេក្រង់&lt;br/&gt; {4,number,integer}. ដកម្រាមដៃចេញ ដើម្បី​បញ្ឈប់​ការ​ពង្រីក"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"នៅពេល​បើកការពង្រីក អ្នក​អាចពង្រីក​នៅលើអេក្រង់​របស់អ្នកបាន។\n\n"<b>"ដើម្បី​ពង្រីកបង្រួម"</b>" សូម​ចាប់ផ្ដើម​ការពង្រីក រួច​ចុចលើកន្លែងណាមួយ​នៅលើអេក្រង់។\n"<ul><li>"អូសដោយប្រើម្រាមដៃ 2 ឬច្រើនដើម្បីរំកិល"</li>\n<li>"ច្បិចដោយប្រើម្រាមដៃ 2 ឬច្រើន ដើម្បីកែតម្រូវ​ការពង្រីកបង្រួម"</li></ul>\n\n<b>"ដើម្បី​ពង្រីកបង្រួម​ជាបណ្តោះអាសន្ន"</b>" ចាប់ផ្តើម​ការពង្រីក បន្ទាប់មកចុចសង្កត់​កន្លែងណាមួយនៅលើអេក្រង់ឱ្យជាប់។\n"<ul><li>"អូសដើម្បីផ្លាស់ទីនៅលើអេក្រង់"</li>\n<li>"លើកម្រាមដៃឡើងដើម្បីបង្រួម"</li></ul>\n\n"អ្នកមិនអាចពង្រីកនៅលើក្តារចុច ឬរបាររុករកបានទេ។"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"ទំព័រទី <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> នៃ <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"ប្រើ​ប៊ូតុងភាពងាយស្រួល ដើម្បីបើក"</string>
@@ -2532,9 +2532,9 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"ក្រហម-បៃតង"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"ខៀវ-លឿង"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"មាត្រដ្ឋានពណ៌​ប្រផេះ"</string>
-    <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"បៃតងខ្សោយ (deuteranomaly)"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"ក្រហមខ្សោយ (protanomaly)"</string>
-    <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"អ្នកមើល​មិនឃើញ​ពណ៌ខៀវ"</string>
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"ខ្សោយពណ៌បៃតង (ខ្វាក់ពណ៌បៃតង)"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"ខ្សោយពណ៌ក្រហម (ខ្វាក់ពណ៌ក្រហម)"</string>
+    <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"ខ្វាក់ពណ៌ខៀវ"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ពន្លឺតិចខ្លាំង"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"ធ្វើឱ្យ​អេក្រង់​មានពន្លឺ​តិចខ្លាំង"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"ផ្លូវកាត់នៃពន្លឺតិចខ្លាំង"</string>
@@ -2608,10 +2608,10 @@
     <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"វា​អាចតាមដានអន្តរកម្មរបស់អ្នកជាមួយនឹងកម្មវិធី ឬឧបករណ៍ចាប់​សញ្ញាហាតវែរ និងធ្វើអន្តរកម្ម​ជាមួយកម្មវិធីនានា​ជំនួសឱ្យអ្នក។"</string>
     <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"អនុញ្ញាត"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"បដិសេធ"</string>
-    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"ឈប់"</string>
+    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"បញ្ឈប់"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"បោះបង់"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"បញ្ឈប់ <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"ការចុច <xliff:g id="STOP">%1$s</xliff:g> នឹងបញ្ឈប់ <xliff:g id="SERVICE">%2$s</xliff:g> ។"</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"ការចុចលើពាក្យ \"<xliff:g id="STOP">%1$s</xliff:g>\" នឹងបញ្ឈប់ <xliff:g id="SERVICE">%2$s</xliff:g>។"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"គ្មាន​សេវាកម្ម​បាន​ដំឡើង"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"មិនបានជ្រើសរើសសេវាកម្មណាមួយឡើយ"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"គ្មាន​ការ​ពណ៌នា​បាន​ផ្ដល់។"</string>
@@ -2723,7 +2723,7 @@
     <string name="advanced_battery_title" msgid="3005993394776555079">"ការប្រើប្រាស់ថ្ម"</string>
     <string name="history_details_title" msgid="8628584613889559355">"ព័ត៌មាន​លម្អិត​ប្រវត្តិ"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"ការប្រើប្រាស់ថ្ម"</string>
-    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"មើលការប្រើប្រាស់ក្នុងរយៈពេល 24 ចុងក្រោយ"</string>
+    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"មើលការប្រើ 24 ម៉ោងចុងក្រោយ"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"មើលការប្រើប្រាស់ពីការសាកថ្មពេញចុងក្រោយ"</string>
     <string name="battery_details_title" msgid="4531369291819754178">"ការប្រើប្រាស់ថ្ម"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"ព័ត៌មាន​លម្អិត​នៃការ​ប្រើ"</string>
@@ -3710,7 +3710,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"ញ័រ​ជានិច្ច"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"ញ័រ​សិន រួចរោទ៍​បន្តិចម្តងៗ"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"សំឡេង​ផ្សេង​ទៀត"</string>
-    <string name="spatial_audio_title" msgid="6591051622375191603">"សំឡេង​ខ្ទររណ្ដំ"</string>
+    <string name="spatial_audio_title" msgid="6591051622375191603">"សំឡេងលំហ"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"សំឡេង​បន្ទះ​លេខ"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"សំឡេង​ចាក់សោ​អេក្រង់"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"ការ​ញ័រ និងសំឡេង​សាកថ្ម"</string>
@@ -4794,7 +4794,7 @@
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"ទិន្នន័យផ្ទៃខាងក្រោយបានបិទ"</string>
     <string name="data_saver_on" msgid="7848893946018448793">"បើក"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"បិទ"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"ប្រើ​កម្មវិធី​សន្សំ​សំចៃ​ទិន្នន័យ"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"ប្រើ​មុខងារ​សន្សំ​សំចៃ​ទិន្នន័យ"</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"ការប្រើប្រាស់ទិន្នន័យគ្មានកំណត់"</string>
     <string name="unrestricted_app_summary" msgid="282698963532000403">"អនុញ្ញាតឲ្យចូលប្រើប្រាស់​ទិន្នន័យគ្មានកំណត់ នៅពេលបើកមុខងារសន្សំសំចៃទិន្នន័យ"</string>
     <string name="home_app" msgid="6056850504746902747">"កម្មវិធីអេក្រង់ដើម"</string>
@@ -4855,8 +4855,8 @@
       <item quantity="one">កម្មវិធី 1 អាច​ប្រើ​ទិន្នន័យដែលគ្មានការដាក់កំហិត</item>
     </plurals>
     <string name="special_access_more" msgid="132919514147475846">"មើលច្រើនទៀត"</string>
-    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"កំណត់ការកម្រិតការវាយតម្លៃលើ ShortcutManager ឡើងវិញ"</string>
-    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ការកម្រិតការវាយតម្លៃ ShortcutManager ត្រូវបានកំណត់ឡើងវិញ"</string>
+    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"កំណត់ដែនកំហិតអត្រា ShortcutManager ឡើងវិញ"</string>
+    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ដែនកំហិតអត្រា ShortcutManager ត្រូវបានកំណត់ឡើងវិញ"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"គ្រប់គ្រង​ព័ត៌មាន​លើអេក្រង់ចាក់សោ"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"បង្ហាញ ឬលាក់មាតិកាជូនដំណឹង"</string>
     <string name="page_tab_title_summary" msgid="7188875610123234454">"ទាំងអស់"</string>
@@ -4880,7 +4880,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"ជួយបង្កើន​កម្រិតថាមពលថ្ម"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"ប្រអប់​ការ​កំណត់​រហ័ស​សម្រាប់​អ្នកអភិវឌ្ឍន៍"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"បិទ​ការអស់ម៉ោង​សម្រាប់​ការផ្ដល់សិទ្ធិ adb"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"បិទ​ការដកសិទ្ធិ adb ដោយស្វ័យប្រវត្តិ​សម្រាប់ប្រព័ន្ធ​ដែលមិនបានភ្ជាប់​ឡើងវិញ​ក្នុងអំឡុង​រយៈពេល​លំនាំដើម (7 ថ្ងៃ) ឬ​រយៈពេល​ដែលបាន​កំណត់​រចនាសម្ព័ន្ធ​ដោយអ្នក​ប្រើប្រាស់ (តិចបំផុត 1 ថ្ងៃ)។"</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"បិទ​ការដកសិទ្ធិ adb ដោយស្វ័យប្រវត្តិ​សម្រាប់ប្រព័ន្ធ​ដែលមិនបានភ្ជាប់​ឡើងវិញ​ក្នុងអំឡុង​រយៈពេល​លំនាំដើម (7 ថ្ងៃ) ឬ​រយៈពេល​ដែលបាន​កំណត់​ដោយអ្នក​ប្រើប្រាស់ (តិចបំផុត 1 ថ្ងៃ)។"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"ដាន Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"ឧបករណ៍​ចាប់សញ្ញាបានបិទ"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"ការកំណត់កម្រងព័ត៌មានការងារ"</string>
@@ -5157,9 +5157,9 @@
     <string name="location_indicator_settings_description" msgid="2888022085372804021">"បង្ហាញ​ទីតាំង​ទាំងអស់ រួមទាំង​បណ្ដាញ និងការតភ្ជាប់"</string>
     <string name="enable_gnss_raw_meas_full_tracking" msgid="1206679951510243341">"ជំរុញការវាស់ GNSS ពេញលេញ"</string>
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"តាមដានក្រុមរូបថត និងហ្រេ្វកង់ GNSS ទាំងអស់​ដែល​គ្មាន​ការបែង​ចែក​រយៈពេល​ដំណើរការ"</string>
-    <string name="input_method_category" msgid="2252659253631639005">"វិធីសាស្ត្រ​បញ្ចូល"</string>
+    <string name="input_method_category" msgid="2252659253631639005">"វិធីបញ្ចូល"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"សំណេរដៃដោយប្រើប៊ិក"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"នៅពេលបើក វិធីសាស្ត្របញ្ចូលបច្ចុប្បន្នទទួល MotionEvent ដោយប្រើប៊ិក ប្រសិនបើកម្មវិធីកែត្រូវបានផ្ដោត។"</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"នៅពេលបើក វិធីបញ្ចូលបច្ចុប្បន្នទទួល MotionEvent ដោយប្រើប៊ិក ប្រសិនបើកម្មវិធីកែត្រូវបានផ្ដោត។"</string>
     <string name="device_theme" msgid="5027604586494772471">"រចនាប័ទ្ម​ឧបករណ៍"</string>
     <string name="default_theme" msgid="4815428567082263639">"លំ​នាំ​ដើម"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"ឈ្មោះ​បណ្តាញ"</string>
@@ -5772,4 +5772,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"កំណត់រចនាសម្ព័ន្ធដែនកំណត់នៃអត្រាចូលរបស់កម្រិតបញ្ជូនលើបណ្ដាញ ដែលត្រូវអនុវត្តចំពោះបណ្ដាញទាំងអស់ដែលផ្ដល់ការតភ្ជាប់អ៊ីនធឺណិត។"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"កំណត់រចនាសម្ព័ន្ធដែនកំណត់នៃអត្រាទាញយកលើបណ្ដាញ"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"គ្មាន​ដែន​កំណត់"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
