--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -342,8 +342,7 @@
     <string name="security_status_title" msgid="6958004275337618656">"ສະຖານະຄວາມປອດໄພ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ລັອກໜ້າຈໍ, ຊອກຫາອຸປະກອນຂອງຂ້ອຍ, ຄວາມປອດໄພແອັບ"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ຄວາມປອດໄພ ແລະ ຄວາມເປັນສ່ວນຕົວ"</string>
-    <!-- no translation found for safety_center_summary (3554867379951053869) -->
-    <skip />
+    <string name="safety_center_summary" msgid="3554867379951053869">"ຄວາມປອດໄພແອັບ, ການລັອກອຸປະກອນ, ການອະນຸຍາດ"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ເພີ່ມໜ້າແລ້ວ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ແຕະເພື່ອຕັ້ງຄ່າໜ້າ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ປົດລັອກດ້ວຍໜ້າ"</string>
@@ -587,14 +586,10 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ຕົວເລືອກໜ້າຈໍລັອກຖືກປິດການນຳໃຊ້ໄວ້. ເພື່ອສຶກສາເພີ່ມເຕີມ, ໃຫ້ຕິດຕໍ່ຜູ້ເບິ່ງແຍງລະບົບອົງກອນຂອງທ່ານ. "<annotation id="admin_details">"ລາຍລະອຽດເພີ່ມເຕີມ"</annotation>\n\n"ທ່ານຍັງຄົງສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອອະນຸມັດການສັ່ງຊື້ແອັບ ແລະ ການເຂົ້າເຖິງແອັບໄດ້. "<annotation id="url">"ສຶກສາເພີ່ມເຕີມ"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ຍົກນິ້ວມືອອກ, ຈາກນັ້ນ ສຳຜັດເຊັນເຊີອີກຄັ້ງ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ບໍ່ສາມາດໃຊ້ເຊັນ​ເຊີລາຍນິ້ວ​ມືໄດ້. ກະລຸນາໄປຫາຜູ້ໃຫ້ບໍລິການສ້ອມແປງ"</string>
-    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
-    <skip />
+    <string name="security_advanced_settings" msgid="6260756619837834042">"ການຕັ້ງຄ່າຄວາມປອດໄພເພີ່ມເຕີມ"</string>
+    <string name="security_advanced_settings_work_profile_settings_summary" msgid="7295451997961973175">"ລັອກ​ໂປຣ​ໄຟລ໌​ບ່ອນ​ເຮັດ​ວຽກ, ການເຂົ້າລະຫັດ ແລະ ອື່ນໆ"</string>
+    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"ການເຂົ້າລະຫັດ, ຂໍ້ມູນການເຂົ້າສູ່ລະບົບ ແລະ ອື່ນໆ"</string>
+    <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"ຄວາມປອດໄພ, ການຕັ້ງຄ່າຄວາມປອດໄພເພີ່ມເຕີມ, ການຕັ້ງຄ່າເພີ່ມເຕີມ, ການຕັ້ງຄ່າຄວາມປອດໄພຂັ້ນສູງ"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ທ່ານ​ສາ​ມາດ​ເພີ່ມ​ບໍ່ເກີນ <xliff:g id="COUNT">%d</xliff:g> ລາຍ​ນີ້ວ​ມື​"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"You’ve added the maximum number of fingerprints"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Can’t add more fingerprints"</string>
@@ -5772,4 +5767,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ຕັ້ງຄ່າຂີດຈຳກັດອັດຕາການເຂົ້າແບນວິດເຄືອຂ່າຍເຊິ່ງນຳໃຊ້ກັບເຄືອຂ່າຍທັງໝົດທີ່ສະໜອງການເຊື່ອມຕໍ່ອິນເຕີເນັດ."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ຕັ້ງຄ່າຂີດຈຳກັດອັດຕາການດາວໂຫຼດເຄືອຂ່າຍ"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"ບໍ່ມີຂີດຈໍາກັດ"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
