--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -342,8 +342,7 @@
     <string name="security_status_title" msgid="6958004275337618656">"സുരക്ഷാ നില"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"സ്‌ക്രീൻ ലോക്ക്, Find My Device, ആപ്പ് സുരക്ഷ"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"സുരക്ഷയും സ്വകാര്യതയും"</string>
-    <!-- no translation found for safety_center_summary (3554867379951053869) -->
-    <skip />
+    <string name="safety_center_summary" msgid="3554867379951053869">"ആപ്പിന്റെ സുരക്ഷ, ഉപകരണ ലോക്ക്, അനുമതികൾ"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"മുഖം ചേർത്തു"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"മുഖം സജ്ജീകരിക്കാൻ ടാപ്പ് ചെയ്യുക"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ഫെയ്‌സ് അൺലോക്ക്"</string>
@@ -587,14 +586,10 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" സ്‌ക്രീൻ ലോക്ക് ഓപ്ഷൻ പ്രവർത്തനരഹിതമാക്കി. കൂടുതലറിയാൻ, നിങ്ങളുടെ സ്ഥാപനത്തിന്റെ അഡ്‌മിനെ ബന്ധപ്പെടുക. "<annotation id="admin_details">"കൂടുതൽ വിശദാംശങ്ങൾ"</annotation>\n\n"നിങ്ങൾക്ക് ഇപ്പോഴും ഫിംഗർപ്രിന്റ് ഉപയോഗിച്ച് വാങ്ങലുകളും ആപ്പ് ആക്‌സസ്സും അംഗീകരിക്കാൻ കഴിയും. "<annotation id="url">"കൂടുതലറിയുക"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"വിരൽ ഉയർത്തുക, തുടർന്ന് സെൻസർ വീണ്ടും തൊടുക"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"വിരലടയാള സെൻസർ ഉപയോഗിക്കാനാകുന്നില്ല. റിപ്പയർ കേന്ദ്രം സന്ദർശിക്കുക"</string>
-    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
-    <skip />
-    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
-    <skip />
+    <string name="security_advanced_settings" msgid="6260756619837834042">"കൂടുതൽ സുരക്ഷാ ക്രമീകരണം"</string>
+    <string name="security_advanced_settings_work_profile_settings_summary" msgid="7295451997961973175">"ഔദ്യോഗിക പ്രൊഫൈൽ ലോക്ക്, എൻക്രിപ്‌ഷൻ എന്നിവയും മറ്റും"</string>
+    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="345336447137417638">"എൻക്രിപ്ഷൻ, ക്രെഡൻഷ്യലുകൾ എന്നിവയും മറ്റും"</string>
+    <string name="security_advanced_settings_keywords" msgid="5294945170370974974">"സുരക്ഷ, കൂടുതൽ സുരക്ഷാ ക്രമീകരണം, കൂടുതൽ ക്രമീകരണം, വിപുലമായ സുരക്ഷാ ക്രമീകരണം"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"നിങ്ങൾക്ക് <xliff:g id="COUNT">%d</xliff:g> വരെ ഫിംഗർപ്രിൻറുകൾ ചേർക്കാനാകും"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"നിങ്ങൾ പരമാവധി എണ്ണം ഫിംഗർപ്രിന്റുകൾ ചേർത്തിട്ടുണ്ട്"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"കൂടുതൽ ഫിംഗർപ്രിന്റുകൾ ചേർക്കാൻ കഴിയില്ല"</string>
@@ -922,8 +917,8 @@
     <string name="wifi_ask_disable" msgid="1663208096020309639">"വൈഫൈ ഓഫാക്കാൻ <xliff:g id="REQUESTER">%s</xliff:g> താൽപ്പര്യപ്പെടുന്നു"</string>
     <string name="art_verifier_for_debuggable_title" msgid="1926445785190030479">"ഡീബഗ് ചെയ്യാവുന്ന ആപ്പുകളുടെ ബൈറ്റ്‌കോഡ് പരിശോധിക്കൂ"</string>
     <string name="art_verifier_for_debuggable_summary" msgid="4802875841862652879">"ഡീബഗ്ഗ് ചെയ്യാവുന്ന ആപ്പുകൾക്കായി ബൈറ്റ്‌കോഡ് പരിശോധിക്കാൻ ART-യെ അനുവദിക്കുക"</string>
-    <string name="show_refresh_rate" msgid="5742688821872354973">"പുതുക്കൽ നിരക്ക് കാണിക്കൂ"</string>
-    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"നിലവിലെ ഡിസ്‌പ്ലേ പുതുക്കൽ നിരക്ക് കാണിക്കൂ"</string>
+    <string name="show_refresh_rate" msgid="5742688821872354973">"റീഫ്രഷ് റേറ്റ് കാണിക്കൂ"</string>
+    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"നിലവിലെ ഡിസ്‌പ്ലേ റീഫ്രഷ് റേറ്റ് കാണിക്കൂ"</string>
     <string name="nfc_quick_toggle_title" msgid="3607620705230351666">"NFC"</string>
     <string name="nfc_quick_toggle_summary" product="tablet" msgid="3622326550467939809">"ടാബ്‌ലെറ്റ് NFC ഉപകരണത്തിൽ സ്‌പർശിക്കുമ്പോൾ ഡാറ്റ കെെമാറ്റം അനുവദിക്കുക"</string>
     <string name="nfc_quick_toggle_summary" product="default" msgid="1460871052409162980">"ഫോൺ NFC ഉപകരണത്തിൽ സ്‌പർശിക്കുമ്പോൾ ഡാറ്റ കെെമാറ്റം അനുവദിക്കുക"</string>
@@ -5772,4 +5767,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ഇന്റർനെറ്റ് കണക്റ്റിവിറ്റി നൽകുന്ന എല്ലാ നെറ്റ്‌വർക്കുകൾക്കും ബാധകമായ നെറ്റ്‌വർക്ക് ബാൻഡ്‌വിഡ്‌ത് ഇൻഗ്രസ് നിരക്ക് പരിധി കോൺഫിഗർ ചെയ്യുക."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"നെറ്റ്‌വർക്ക് ഡൗൺലോഡ് നിരക്ക് പരിധി കോൺഫിഗർ ചെയ്യുക"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"പരിധിയില്ല"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
