--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -2343,7 +2343,7 @@
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"ଆପଣଙ୍କ ଡିସପ୍ଲେର ଆକାର ଏବଂ ଟେକ୍ସଟ ପସନ୍ଦଗୁଡ଼ିକ ଫୋନର ମୂଳ ସେଟିଂସରେ ରିସେଟ ହେବ"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ରିସେଟ କରନ୍ତୁ"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"ସପ୍ତାହାନ୍ତ ପାଇଁ କୌଣସି ପ୍ଲାନ ଅଛି?"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ବେଳାଭୂମିକୁ ବୁଲିବା ପାଇଁ ଯିବା। ଯୋଗ ଦେବା ପାଇଁ ଚାହୁଁଛନ୍ତି?"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ବେଳାଭୂମିକୁ ବୁଲିବା ପାଇଁ ଯାଉଛି। ଯୋଗ ଦେବାକୁ ଚାହୁଁଛନ୍ତି?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"ବିକଳ୍ପଗୁଡ଼ିକ"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"ସ୍କ୍ରିନ୍‌ ଉପରେ ଜୁମ୍‌ ଇନ୍‌ କରନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"ଜୁମ୍‌ କରିବାକୁ 3ଥର ଟାପ୍‌ କରନ୍ତୁ"</string>
@@ -2535,9 +2535,9 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"ସବୁଜ ରଙ୍ଗ ଦେଖିବାରେ ସମସ୍ୟା, ଡ୍ୟୁଟେରାନୋମାଲି"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"ଲାଲ୍ ରଙ୍ଗ ଦେଖିବାରେ ସମସ୍ୟା, ପ୍ରୋଟାନୋମାଲି"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"ଟ୍ରିଟାନୋମାଲି"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ଅତିରିକ୍ତ ଡିମ୍"</string>
-    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"ସ୍କ୍ରିନକୁ ଅତିରିକ୍ତ ଡିମ୍ କରନ୍ତୁ"</string>
-    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"ଅତିରିକ୍ତ ଡିମ୍ ପାଇଁ ସର୍ଟକଟ୍"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ଅତ୍ୟଧିକ ଡିମ"</string>
+    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"ସ୍କ୍ରିନକୁ ଅତ୍ୟଧିକ ଡିମ କରନ୍ତୁ"</string>
+    <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"ଅତ୍ୟଧିକ ଡିମ ପାଇଁ ସର୍ଟକଟ"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"ଅତିରିକ୍ତ ଡିମ୍ ବିଷୟରେ"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"ସ୍କ୍ରିନକୁ ଆପଣଙ୍କ ଫୋନର ସର୍ବନିମ୍ନ ଉଜ୍ଜ୍ୱଳତାଠାରୁ ଅଧିକ ଡିମ୍ କରନ୍ତୁ"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"ସ୍କ୍ରିନକୁ ଆପଣଙ୍କ ଟାବଲେଟର ସର୍ବନିମ୍ନ ଉଜ୍ଜ୍ୱଳତାଠାରୁ ଅଧିକ ଡିମ୍ କରନ୍ତୁ"</string>
@@ -3025,7 +3025,7 @@
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"ସୁରକ୍ଷିତ ନୁହେଁ"</string>
     <string name="vpn_settings_single_insecure_multiple_total" msgid="6107225844641301139">"<xliff:g id="VPN_COUNT">%d</xliff:g> ସୁରକ୍ଷିତ ନୁହେଁ"</string>
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> ସୁରକ୍ଷିତ ନୁହେଁ"</string>
-    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"ଆଡପ୍ଟିଭ୍ କନେକ୍ଟିଭିଟି"</string>
+    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"ଆଡେପ୍ଟିଭ କନେକ୍ଟିଭିଟି"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"ଆପଣଙ୍କ ନେଟୱାର୍କ ସଂଯୋଗଗୁଡ଼ିକୁ ସ୍ୱଚାଳିତ ଭାବେ ପରିଚାଳନା କରି ବ୍ୟାଟେରୀ ଲାଇଫ୍ ବଢ଼ାଏ ଏବଂ ଡିଭାଇସର କାର୍ଯ୍ୟଦକ୍ଷତାକୁ ଉନ୍ନତ କରେ"</string>
     <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"ଚାଲୁ ଅଛି"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"ବନ୍ଦ ଅଛି"</string>
@@ -3699,7 +3699,7 @@
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"ଆଲାର୍ମର ଭଲ୍ୟୁମ୍‌"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"ରିଙ୍ଗ ଏବଂ ବିଜ୍ଞପ୍ତି ଭଲ୍ୟୁମ୍"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"ସୂଚନା ଭଲ୍ୟୁମ"</string>
-    <string name="ringtone_title" msgid="3271453110387368088">"ଫୋନ୍‌ ରିଙ୍ଗଟୋନ୍‌"</string>
+    <string name="ringtone_title" msgid="3271453110387368088">"ଫୋନ ରିଂଟୋନ"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"ଡିଫଲ୍ଟ ବିଜ୍ଞପ୍ତି ସାଉଣ୍ଡ"</string>
     <string name="notification_unknown_sound_title" msgid="1319708450698738980">"ଆପ୍‌ ଦ୍ୱାରା ପ୍ରଦତ୍ତ ଶବ୍ଦ"</string>
     <string name="notification_sound_default" msgid="8630353701915294299">"ଡିଫଲ୍ଟ ବିଜ୍ଞପ୍ତି ସାଉଣ୍ଡ"</string>
@@ -5772,4 +5772,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"ଇଣ୍ଟରନେଟ ସଂଯୋଗ ପ୍ରଦାନ କରୁଥିବା ସମସ୍ତ ନେଟୱାର୍କରେ ଲାଗୁ ହେଉଥିବା ନେଟୱାର୍କ ବ୍ୟାଣ୍ଡୱିଡଥ ଇନଗ୍ରେସ ରେଟ ସୀମାକୁ କନଫିଗର କରନ୍ତୁ।"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ନେଟୱାର୍କ ଡାଉନଲୋଡ ରେଟ ସୀମାକୁ କନଫିଗର କରନ୍ତୁ"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"କୌଣସି ସୀମା ନାହିଁ"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
