--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -2293,7 +2293,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"音訊"</string>
     <string name="general_category_title" msgid="6298579528716834157">"一般"</string>
     <string name="display_category_title" msgid="6638191682294461408">"螢幕"</string>
-    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"顏色同動作"</string>
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"顏色及動作"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"校暗螢幕"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"互動控制項"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"時間控制"</string>
@@ -2308,27 +2308,27 @@
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"關於字幕偏好設定"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"進一步了解字幕偏好設定"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"放大"</string>
-    <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"放大功能捷徑"</string>
-    <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"放大目前輸入嘅內容"</string>
-    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"放大輸入嘅文字"</string>
+    <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"放大捷徑"</string>
+    <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"放大輸入內容"</string>
+    <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"放大輸入中的文字"</string>
     <string name="accessibility_screen_magnification_about_title" msgid="8857919020223505415">"關於放大功能"</string>
     <string name="accessibility_screen_magnification_footer_learn_more_content_description" msgid="924848332575978463">"進一步了解放大功能"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"放大類型"</string>
     <string name="accessibility_magnification_area_settings_message" msgid="8498648925928109462">"你可以放大成個或者局部畫面，亦都可以轉換呢兩種模式"</string>
     <string name="accessibility_magnification_area_settings_full_screen_summary" msgid="2728962784113713010">"全螢幕"</string>
     <string name="accessibility_magnification_area_settings_window_screen_summary" msgid="9191632962955877019">"部分畫面"</string>
-    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"轉換成個或者部分畫面"</string>
+    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"切換全螢幕或局部放大"</string>
     <string name="accessibility_magnification_mode_dialog_title" msgid="9151027667059878578">"揀放大方式"</string>
     <string name="accessibility_magnification_mode_dialog_option_full_screen" msgid="4892487869954032029">"放大成個畫面"</string>
     <string name="accessibility_magnification_mode_dialog_option_window" msgid="4492443201099153362">"放大部分畫面"</string>
-    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"轉換畫面全部放大或者部分放大模式"</string>
+    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"切換全螢幕或局部放大"</string>
     <string name="accessibility_magnification_area_settings_mode_switch_summary" msgid="2885238806099080966">"輕按切換按鈕即可在兩個選項之間移動"</string>
     <string name="accessibility_magnification_switch_shortcut_title" msgid="3671432048806533079">"要改用無障礙功能按鈕嗎？"</string>
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"使用「輕按三下放大」功能放大部分畫面，輸入內容及執行其他操作時會出現延遲。\n\n無障礙工具按鈕會浮動顯示在畫面中的其他應用程式上方。輕按即可放大"</string>
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"改用無障礙功能按鈕"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"使用「輕按三下」功能"</string>
     <string name="accessibility_magnification_triple_tap_warning_title" msgid="8484669851397296597">"這麼做可能會令鍵盤運作速度變慢"</string>
-    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"當您使用輕按三下手勢放大局部畫面時，可能會發現鍵盤無法正常運作。\n\n為避免此情況，您可以將放大捷徑由輕按三下改成其他方式。\n"<annotation id="link">"變更設定"</annotation></string>
+    <string name="accessibility_magnification_triple_tap_warning_message" msgid="2008671502848936410">"使用輕按三下手勢局部放大畫面時，鍵盤可能會出現問題。\n\n為避免此情況，您可以由輕按三下改用其他放大捷徑。\n"<annotation id="link">"變更設定"</annotation></string>
     <string name="accessibility_magnification_triple_tap_warning_positive_button" msgid="8712304035901450010">"仍要繼續"</string>
     <string name="accessibility_magnification_triple_tap_warning_negative_button" msgid="2028849736366584733">"取消"</string>
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"放大設定"</string>
@@ -2345,14 +2345,14 @@
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"要重設顯示大小和文字嗎？"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"顯示大小和文字偏好設定將重設為手機原始設定"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"重設"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"你週末有冇咩計劃？"</string>
-    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"會去沙灘。想唔想一齊？"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"你禮拜六日會做咩？"</string>
+    <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"會去沙灘。一齊去？"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"選項"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"放大螢幕"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"輕按 3 次即可縮放畫面"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"輕按按鈕即可縮放"</string>
-    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"可以快速放大螢幕畫面入面嘅內容"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;跟住以下步驟就可以放大螢幕畫面：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 用快速鍵啟用放大功能&lt;br/&gt; {1,number,integer}. 㩒一下螢幕&lt;br/&gt; {2,number,integer}. 用 2 隻手指拖住畫面就可以四圍郁&lt;br/&gt; {3,number,integer}. 用 2 隻手指縮放就可以調整縮放程度&lt;br/&gt; {4,number,integer}. 用快速鍵就可以停用放大功能&lt;br/&gt;&lt;br/&gt;&lt;b&gt;如果要暫時放大螢幕畫面，請跟住以下步驟操作：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 確保放大類型設定咗做全螢幕&lt;br/&gt; {1,number,integer}. 用快速鍵啟用放大功能&lt;br/&gt; {2,number,integer}. 㩒住畫面上面任何地方&lt;br/&gt; {3,number,integer}. 用 2 隻手指拖住畫面就可以四圍郁&lt;br/&gt; {4,number,integer}. 提起手指就可以停止放大螢幕畫面"</string>
+    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"快速放大螢幕畫面中的內容"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;放大螢幕畫面：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 用捷徑開始放大&lt;br/&gt; {1,number,integer}. 輕按螢幕&lt;br/&gt; {2,number,integer}. 用兩指拖曳畫面即可四處移動&lt;br/&gt; {3,number,integer}. 用兩指縮放即可調整縮放比例&lt;br/&gt; {4,number,integer}. 用捷徑即可停止放大&lt;br/&gt;&lt;br/&gt;&lt;b&gt;暫時放大螢幕畫面：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 確定放大類型已設為全螢幕&lt;br/&gt; {1,number,integer}. 用捷徑開始放大&lt;br/&gt; {2,number,integer}. 按住畫面上任何地方&lt;br/&gt; {3,number,integer}. 用兩指拖曳畫面即可四處移動&lt;br/&gt; {4,number,integer}. 提起手指即可停止放大"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"開啟放大功能後，您可放大畫面。\n\n"<b>"如要縮放"</b>"，請開啟放大功能，然後輕按螢幕任何地方。\n"<ul><li>"用 2 隻或多隻手指拖曳，即可捲動螢幕"</li>\n<li>"用 2 隻或多隻手指縮放，即可調整縮放程度"</li></ul>\n\n<b>"如要暫時縮放"</b>"，請開啟放大功能，再按住螢幕任何地方。\n"<ul><li>"拖曳即可在螢幕上移動"</li>\n<li>"提起手指即可縮小至原大"</li></ul>\n\n"您無法在鍵盤或導覽列上使用放大功能。"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"<xliff:g id="NUM_PAGES">%2$d</xliff:g> 頁中嘅第 <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> 頁"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"使用無障礙功能按鈕開啟"</string>
@@ -2532,7 +2532,7 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"無障礙功能捷徑"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"在「快速設定」中顯示"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"紅綠不分"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"紅綠色盲"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"紅綠不分"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"藍黃不分"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"灰階螢幕"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"綠色弱、綠色盲"</string>
@@ -3731,7 +3731,7 @@
     <string name="live_caption_summary" msgid="2898451867595161809">"自動為媒體加入字幕"</string>
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"手機喇叭"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"有線耳機"</string>
-    <string name="spatial_audio_text" msgid="3273982964342449273">"「空間音訊」功能可創造身歷其境的聽覺享受，讓聲音聽起來彷彿來自四面八方。此功能只支援部分媒體。"</string>
+    <string name="spatial_audio_text" msgid="3273982964342449273">"「情景音效」功能可創造身歷其境的聽覺享受，讓聲音聽起來彷彿來自四面八方。此功能只支援部分媒體。"</string>
     <string name="spatial_summary_off" msgid="8272678804629774378">"已關閉"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"已開啟/<xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"已開啟/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g>和<xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
@@ -5775,4 +5775,20 @@
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"設定網絡頻寬輸入頻率限制，這項設定會套用至提供互聯網連線的所有網絡。"</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"設定網絡下載頻率限制"</string>
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"無限制"</string>
+    <!-- no translation found for bluetooth_broadcast_dialog_title (9172775308463135884) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_find_message (6621660851669953883) -->
+    <skip />
+    <!-- no translation found for bluetooth_broadcast_dialog_broadcast_message (6198264676009094495) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_title (5385985218699831970) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_summary (3907899428626210673) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast (1768337775649457586) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_leave (7881206581147104908) -->
+    <skip />
+    <!-- no translation found for bluetooth_find_broadcast_button_scan (3995664694641895189) -->
+    <skip />
 </resources>
